--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="dist/app.css">
 </head>
 <body>
+<div class="container">
+    <button class="btn btn-primary" id="button">Click</button>
+</div>
 
-<button class="btn" id="button">Click</button>
 
-<script src="dist/bundle.js"></script>
+<script src="dist/app.js"></script>
 </body>
 </html>
